<resources>
    <string name="app_name">Enno</string>
    <string name="enter_the_space">Enter the space</string>
    <string name="login_intro_text">Feel free to express yourself! No taboo , no violence , no shame! But please we respect each other here.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anonymousid">/@/AnonymousID</string>
    <string name="text_sample_post">Here is the text that is supposed to be displayed directly when a user is sending a new post.</string>
    <string name="position_user">position_user</string>
    <string name="time_sample">Now</string>
    <string name="position_sample">Very close</string>
    <string name="like_post">like post</string>
    <string name="sample_likes">123</string>
    <string name="add_new_post">add new post</string>
    <string name="post_creation_hint">Share all your thoughts freely and talk to the community</string>
    <string name="back">Back</string>
    <string name="post">Post</string>
    <string name="options">Options</string>
    <string name="hint_chat_sample">Share your thoughts following the community guidelines.</string>
    <string name="separator">separator</string>
    <string name="invite_prompt">Make your friends enjoy our space and share their thoughts !</string>
    <string name="invite_your_friends">Invite your friends</string>
    <string name="my_account">My account</string>
    <string name="my_enno_ano">My enno ano</string>
    <string name="my_comments">My comments</string>
    <string name="exit_the_space">Exit the space</string>
    <string name="credits">Credits</string>
    <string name="credit_sample">000</string>
    <string name="game_title">Games</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="new_chat_request_text">New chat request</string>
    <string name="balance_credit">Balance credit</string>
    <string name="recharge">10 credits</string>
    <string name="recharge_more">20 credits</string>
    <string name="chats">Chats</string>
    <string name="request">Chat requests</string>
    <string name="number_of_requests">(0)</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prompt_chat_requests">You can approve or reject the requests for chats. Make sure of your chat and report the one spamming you. Don\'t share personal informations.</string>
    <string name="decline_all_the_requests">Decline all the requests</string>
    <string name="gaming_welcome">Welcome to the Gaming Enno Universe. Play, Enjoy and Earn your credits ☺️.</string>
    <string name="coming_soon">Coming soon !</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="quizz_tournament">Quiz tournament</string>
    <string name="this_or_that">This or that ?</string>
</resources>