<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/comment_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/bg_app_primary_color"
        app:contentPadding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/comment_card_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anonymousid"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/position_ic"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/position_user"
                android:src="@drawable/position_ic"
                app:layout_constraintLeft_toRightOf="@id/comment_card_id"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comment_card_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_sample"
                android:textColor="@color/gray_color"
                android:textSize="13sp"
                app:layout_constraintLeft_toRightOf="@id/position_ic"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comment_card_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/text_sample_post"
                android:textColor="@color/white"
                android:textSize="@dimen/H2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/comment_card_id" />

            <ImageView
                android:id="@+id/comment_card_dot_separator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/separator"
                android:src="@drawable/dot_small_svgrepo_com"
                app:layout_constraintLeft_toRightOf="@id/comment_card_position"
                app:layout_constraintRight_toLeftOf="@+id/comment_card_time"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/comment_card_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_sample"
                android:textColor="@color/gray_color"
                android:textSize="@dimen/p1"
                app:layout_constraintLeft_toRightOf="@+id/comment_card_dot_separator"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/comment_card_options"
                android:layout_width="18dp"
                android:layout_height="17dp"
                android:contentDescription="@string/options"
                android:src="@drawable/options_svgrepo_com__1_"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/like_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/like_post"
                android:src="@drawable/like_ic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_card_content" />

            <TextView
                android:id="@+id/comment_card_number_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:text="@string/sample_likes"
                android:textColor="@color/gray_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/like_comment" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>